JDK-17 tests refreshed, h5/sample removed